# src/routes/category.route.js
@@ -1,15 +1,20 @@
 import { Router } from "express";
-import { createCategory, createSubCategory, disableCategory, fetchAllCategoryansSubCategory, fetchSubCategory } from "../controllers/category.controller.js";
+import {
+  createCategory,
+  createSubCategory,
+  disableCategory,
+  disableSubCategory,
+  fetchAllCategoryansSubCategory,
+  fetchSubCategory,
+} from "../controllers/category.controller.js";
 
+const router = Router();
 
-const router = Router()
+router.post("/create-category", createCategory);
+router.post("/create-subCategory", createSubCategory);
+router.get("/fetchAllCategory", fetchAllCategoryansSubCategory);
+router.get("/fetchSubCategory/:categoryId", fetchSubCategory);
+router.get("/disableCategory/:categoryId", disableCategory);
+router.get("/disableSubCategory/:subCategoryId", disableSubCategory);
 
-
-router.post("/create-category",createCategory)
-router.post("/create-subCategory",createSubCategory)
-router.get("/fetchAllCategory",fetchAllCategoryansSubCategory)
-router.get("/fetchSubCategory/:categoryId",fetchSubCategory)
-router.get("/disableCategory/:categoryId",disableCategory)
-router.get("/disableSubCategory/:subCategoryId",fetchSubCategory)
-
-export default router
+export default router;
